objects/SGR_Plan_Rate_Result__c.object
<CustomObject>
    <fields>
        <fullName>areaFactorClass__c</fullName>
        <label>Area FactorClass</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>benefitName__c</fullName>
        <label>Benefit Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>benefitType__c</fullName>
        <label>Benefit Type</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coverageCode__c</fullName>
        <label>Coverage Code</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>planId__c</fullName>
        <label>Plan Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productValue__c</fullName>
        <label>Product Value</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Plan Rate Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Rate Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Rate Results</pluralLabel>
    <recordTypes>
        <fullName>Plan_Rate_Result_Record_Type</fullName>
        <active>true</active>
        <label>Plan Rate Result Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>